--- a/css/inner.css
+++ b/css/inner.css
@@ -1,266 +1,267 @@
+/**/
 @-webkit-keyframes rotate {
-  /* line 24, ../scss/_base.scss */
+  /* line 28, D:/Git/teleus/scss/_base.scss */
   0% {
     -webkit-transform: rotate(-10deg);
   }
 
-  /* line 27, ../scss/_base.scss */
+  /* line 31, D:/Git/teleus/scss/_base.scss */
   10% {
     -webkit-transform: rotate(0deg);
   }
 
-  /* line 30, ../scss/_base.scss */
+  /* line 34, D:/Git/teleus/scss/_base.scss */
   20% {
     -webkit-transform: rotate(10deg);
   }
 
-  /* line 33, ../scss/_base.scss */
+  /* line 37, D:/Git/teleus/scss/_base.scss */
   30% {
     -webkit-transform: rotate(0deg);
   }
 
-  /* line 36, ../scss/_base.scss */
+  /* line 40, D:/Git/teleus/scss/_base.scss */
   40% {
     -webkit-transform: rotate(-10deg);
   }
 
-  /* line 39, ../scss/_base.scss */
+  /* line 43, D:/Git/teleus/scss/_base.scss */
   50% {
     -webkit-transform: rotate(0deg);
   }
 
-  /* line 42, ../scss/_base.scss */
+  /* line 46, D:/Git/teleus/scss/_base.scss */
   60% {
     -webkit-transform: rotate(10deg);
   }
 
-  /* line 45, ../scss/_base.scss */
+  /* line 49, D:/Git/teleus/scss/_base.scss */
   70% {
     -webkit-transform: rotate(0deg);
   }
 
-  /* line 48, ../scss/_base.scss */
+  /* line 52, D:/Git/teleus/scss/_base.scss */
   80% {
     -webkit-transform: rotate(-10deg);
   }
 
-  /* line 51, ../scss/_base.scss */
+  /* line 55, D:/Git/teleus/scss/_base.scss */
   100% {
     -webkit-transform: rotate(0deg);
   }
 }
 
 @-moz-keyframes rotate {
-  /* line 56, ../scss/_base.scss */
+  /* line 60, D:/Git/teleus/scss/_base.scss */
   0% {
     -moz-transform: rotate(-10deg);
   }
 
-  /* line 59, ../scss/_base.scss */
+  /* line 63, D:/Git/teleus/scss/_base.scss */
   10% {
     -moz-transform: rotate(0deg);
   }
 
-  /* line 62, ../scss/_base.scss */
+  /* line 66, D:/Git/teleus/scss/_base.scss */
   20% {
     -moz-transform: rotate(10deg);
   }
 
-  /* line 65, ../scss/_base.scss */
+  /* line 69, D:/Git/teleus/scss/_base.scss */
   30% {
     -moz-transform: rotate(0deg);
   }
 
-  /* line 68, ../scss/_base.scss */
+  /* line 72, D:/Git/teleus/scss/_base.scss */
   40% {
     -moz-transform: rotate(-10deg);
   }
 
-  /* line 71, ../scss/_base.scss */
+  /* line 75, D:/Git/teleus/scss/_base.scss */
   50% {
     -moz-transform: rotate(0deg);
   }
 
-  /* line 74, ../scss/_base.scss */
+  /* line 78, D:/Git/teleus/scss/_base.scss */
   60% {
     -moz-transform: rotate(10deg);
   }
 
-  /* line 77, ../scss/_base.scss */
+  /* line 81, D:/Git/teleus/scss/_base.scss */
   70% {
     -moz-transform: rotate(0deg);
   }
 
-  /* line 80, ../scss/_base.scss */
+  /* line 84, D:/Git/teleus/scss/_base.scss */
   80% {
     -moz-transform: rotate(-10deg);
   }
 
-  /* line 83, ../scss/_base.scss */
+  /* line 87, D:/Git/teleus/scss/_base.scss */
   100% {
     -moz-transform: rotate(0deg);
   }
 }
 
 @-o-keyframes rotate {
-  /* line 88, ../scss/_base.scss */
+  /* line 92, D:/Git/teleus/scss/_base.scss */
   0% {
     -o-transform: rotate(-10deg);
   }
 
-  /* line 91, ../scss/_base.scss */
+  /* line 95, D:/Git/teleus/scss/_base.scss */
   10% {
     -o-transform: rotate(0deg);
   }
 
-  /* line 94, ../scss/_base.scss */
+  /* line 98, D:/Git/teleus/scss/_base.scss */
   20% {
     -o-transform: rotate(10deg);
   }
 
-  /* line 97, ../scss/_base.scss */
+  /* line 101, D:/Git/teleus/scss/_base.scss */
   30% {
     -o-transform: rotate(0deg);
   }
 
-  /* line 100, ../scss/_base.scss */
+  /* line 104, D:/Git/teleus/scss/_base.scss */
   40% {
     -o-transform: rotate(-10deg);
   }
 
-  /* line 103, ../scss/_base.scss */
+  /* line 107, D:/Git/teleus/scss/_base.scss */
   50% {
     -o-transform: rotate(0deg);
   }
 
-  /* line 106, ../scss/_base.scss */
+  /* line 110, D:/Git/teleus/scss/_base.scss */
   60% {
     -o-transform: rotate(10deg);
   }
 
-  /* line 109, ../scss/_base.scss */
+  /* line 113, D:/Git/teleus/scss/_base.scss */
   70% {
     -o-transform: rotate(0deg);
   }
 
-  /* line 112, ../scss/_base.scss */
+  /* line 116, D:/Git/teleus/scss/_base.scss */
   80% {
     -o-transform: rotate(-10deg);
   }
 
-  /* line 115, ../scss/_base.scss */
+  /* line 119, D:/Git/teleus/scss/_base.scss */
   100% {
     -o-transform: rotate(0deg);
   }
 }
 
 /*inner*/
-/* line 6, ../scss/inner.scss */
+/* line 4, ../scss/inner.scss */
 .tabs_sidebar {
   margin-right: -10px;
 }
 
-/* line 10, ../scss/inner.scss */
+/* line 8, ../scss/inner.scss */
 .tabs__content_sb a {
   font-weight: normal;
 }
-/* line 13, ../scss/inner.scss */
+/* line 11, ../scss/inner.scss */
 .tabs__content_sb span {
   display: block;
   margin: 10px 0 15px 0;
   color: #acacac;
   font-size: 14px;
 }
-/* line 18, ../scss/inner.scss */
+/* line 16, ../scss/inner.scss */
 .tabs__content_sb span a {
   font-size: 14px;
 }
-/* line 22, ../scss/inner.scss */
+/* line 20, ../scss/inner.scss */
 .tabs__content_sb .btn {
   border: 1px solid #ae6c00;
   line-height: 30px;
   font-weight: bold;
 }
-/* line 26, ../scss/inner.scss */
+/* line 24, ../scss/inner.scss */
 .tabs__content_sb .btn:active {
   line-height: 32px;
 }
 
-/* line 31, ../scss/inner.scss */
+/* line 29, ../scss/inner.scss */
 .banner {
   height: 250px;
   margin-bottom: 40px;
   background: #ebebeb;
 }
 
-/* line 36, ../scss/inner.scss */
+/* line 34, ../scss/inner.scss */
 .pagination {
   position: relative;
   margin-top: 35px;
   padding-bottom: 50px;
   border-top: 1px solid #d3d3d3;
 }
-/* line 41, ../scss/inner.scss */
+/* line 39, ../scss/inner.scss */
 .pagination p {
   padding: 15px 0;
   overflow: hidden;
 }
-/* line 44, ../scss/inner.scss */
+/* line 42, ../scss/inner.scss */
 .pagination p b {
   float: left;
   font-weight: normal;
 }
-/* line 48, ../scss/inner.scss */
+/* line 46, ../scss/inner.scss */
 .pagination p span {
   float: right;
   color: #acacac;
 }
-/* line 53, ../scss/inner.scss */
+/* line 51, ../scss/inner.scss */
 .pagination .pagination__nav {
   left: 0;
   top: 75px;
 }
 
-/* line 59, ../scss/inner.scss */
+/* line 57, ../scss/inner.scss */
 .pagination__list a {
   margin-right: 8px;
   font-weight: bold;
 }
-/* line 63, ../scss/inner.scss */
+/* line 61, ../scss/inner.scss */
 .pagination__list .active {
   color: #ffb21f;
 }
 
 /*article*/
-/* line 69, ../scss/inner.scss */
+/* line 67, ../scss/inner.scss */
 .article .h2 {
   line-height: 1.3;
 }
 
-/* line 74, ../scss/inner.scss */
+/* line 72, ../scss/inner.scss */
 .article__content img {
   float: left;
   margin: 0 30px 15px 0;
   border: 1px solid #939393;
 }
-/* line 79, ../scss/inner.scss */
+/* line 77, ../scss/inner.scss */
 .article__content h4 {
   margin-bottom: 15px;
   font-size: 16px;
 }
-/* line 83, ../scss/inner.scss */
+/* line 81, ../scss/inner.scss */
 .article__content p {
   margin-bottom: 15px;
   line-height: 1.5;
 }
-/* line 87, ../scss/inner.scss */
+/* line 85, ../scss/inner.scss */
 .article__content blockquote {
   padding-left: 35px;
   margin-bottom: 15px;
   border-left: 3px solid #d3d3d3;
   line-height: 1.5;
 }
-/* line 94, ../scss/inner.scss */
+/* line 92, ../scss/inner.scss */
 .article__content table {
   width: 100%;
   margin-bottom: 20px;
@@ -269,40 +270,40 @@
   border-top: 1px solid #d3d3d3;
   text-align: left;
 }
-/* line 102, ../scss/inner.scss */
+/* line 100, ../scss/inner.scss */
 .article__content tr {
   border-bottom: 1px solid #d3d3d3;
 }
-/* line 104, ../scss/inner.scss */
+/* line 102, ../scss/inner.scss */
 .article__content tr:nth-child(even) {
   background: #f8f8f8;
 }
-/* line 108, ../scss/inner.scss */
+/* line 106, ../scss/inner.scss */
 .article__content td, .article__content th {
   padding: 15px;
 }
-/* line 110, ../scss/inner.scss */
+/* line 108, ../scss/inner.scss */
 .article__content td:first-child, .article__content th:first-child {
   width: 380px;
 }
-/* line 114, ../scss/inner.scss */
+/* line 112, ../scss/inner.scss */
 .article__content th {
   font-style: italic;
   color: #acacac;
   font-weight: normal;
 }
 
-/* line 120, ../scss/inner.scss */
+/* line 118, ../scss/inner.scss */
 .article__date {
   margin-bottom: 20px;
   overflow: hidden;
 }
-/* line 123, ../scss/inner.scss */
+/* line 121, ../scss/inner.scss */
 .article__date span {
   float: left;
   color: #acacac;
 }
-/* line 127, ../scss/inner.scss */
+/* line 125, ../scss/inner.scss */
 .article__date a {
   float: right;
   border-bottom: 1px solid #BBE4F1;
@@ -313,41 +314,41 @@
   -ms-transition: border-color 0.5s linear;
   transition: border-color 0.5s linear;
 }
-/* line 132, ../scss/inner.scss */
+/* line 130, ../scss/inner.scss */
 .article__date a:hover {
   border-bottom: 1px solid #09c;
 }
 
 /*add comment*/
-/* line 138, ../scss/inner.scss */
+/* line 136, ../scss/inner.scss */
 .add-comm {
   margin-top: 20px;
   padding: 0 20px;
   background: #fff2b6;
 }
-/* line 142, ../scss/inner.scss */
+/* line 140, ../scss/inner.scss */
 .add-comm h3 {
   padding: 15px 0;
 }
 
-/* line 146, ../scss/inner.scss */
+/* line 144, ../scss/inner.scss */
 .add-comm__txt {
   border: 1px solid #d0d0d0;
   overflow: hidden;
 }
-/* line 149, ../scss/inner.scss */
+/* line 147, ../scss/inner.scss */
 .add-comm__txt textarea {
   width: 100%;
   height: 200px;
 }
 
-/* line 154, ../scss/inner.scss */
+/* line 152, ../scss/inner.scss */
 .add-comm__btn {
   position: relative;
   padding: 20px 0;
   overflow: hidden;
 }
-/* line 158, ../scss/inner.scss */
+/* line 156, ../scss/inner.scss */
 .add-comm__btn .btn {
   float: left;
   width: 95px;
@@ -357,76 +358,76 @@
   line-height: 28px;
   cursor: pointer;
 }
-/* line 166, ../scss/inner.scss */
+/* line 164, ../scss/inner.scss */
 .add-comm__btn .btn:active {
   line-height: 30px;
 }
-/* line 170, ../scss/inner.scss */
+/* line 168, ../scss/inner.scss */
 .add-comm__btn p {
   float: left;
   margin: 0;
   line-height: 30px;
 }
-/* line 175, ../scss/inner.scss */
+/* line 173, ../scss/inner.scss */
 .add-comm__btn a {
   margin-left: 25px;
   border-bottom: 1px solid #BBE4F1;
 }
-/* line 178, ../scss/inner.scss */
+/* line 176, ../scss/inner.scss */
 .add-comm__btn a i {
-  background: url('../img/icons-sedb12026c5.png') 0 -1076px no-repeat;
+  background: url('../img/icons-sdc326c2acf.png') 0 -716px no-repeat;
   width: 14px;
   height: 16px;
 }
 
 /*comments*/
-/* line 185, ../scss/inner.scss */
+/* line 183, ../scss/inner.scss */
 .comms h3 {
   margin: 35px 0;
 }
-/* line 189, ../scss/inner.scss */
+/* line 187, ../scss/inner.scss */
 .comms .block span {
   display: block;
   margin-bottom: 20px;
 }
-/* line 194, ../scss/inner.scss */
+/* line 192, ../scss/inner.scss */
 .comms p {
   margin-bottom: 10px;
 }
 
-/* line 198, ../scss/inner.scss */
+/* line 196, ../scss/inner.scss */
 .all-reviews {
   margin-top: 30px;
   padding-bottom: 5px;
   overflow: hidden;
 }
-/* line 202, ../scss/inner.scss */
+/* line 200, ../scss/inner.scss */
 .all-reviews a {
   float: left;
 }
-/* line 205, ../scss/inner.scss */
+/* line 203, ../scss/inner.scss */
 .all-reviews .all-reviews__link {
   margin: 6px 0 0 30px;
   border-bottom: 1px solid #BBE4F1;
 }
 
 /*text area*/
-/* line 211, ../scss/inner.scss */
+/* line 209, ../scss/inner.scss */
 .jHtmlArea {
   background: #fff;
 }
-/* line 213, ../scss/inner.scss */
+/* line 211, ../scss/inner.scss */
 .jHtmlArea iframe {
   border: none;
 }
-/* line 217, ../scss/inner.scss */
+/* line 215, ../scss/inner.scss */
 .jHtmlArea .ToolBar ul {
   padding: 5px;
   background: #f8f8f8;
   border-bottom: 1px solid #e5e5e5;
   overflow: hidden;
 }
-/* line 223, ../scss/inner.scss */
+/* line 221, ../scss/inner.scss */
 .jHtmlArea .ToolBar li {
   float: left;
   margin-right: 5px;
@@ -445,55 +446,55 @@
   background-image: linear-gradient(#ffffff, #ebeaea);
   border: 1px solid #bebebe;
 }
-/* line 230, ../scss/inner.scss */
+/* line 228, ../scss/inner.scss */
 .jHtmlArea .ToolBar li:hover {
   border: solid 1px #8d8d8d;
 }
-/* line 234, ../scss/inner.scss */
+/* line 232, ../scss/inner.scss */
 .jHtmlArea .ToolBar a {
   display: block;
   width: 23px;
   height: 23px;
 }
-/* line 239, ../scss/inner.scss */
+/* line 237, ../scss/inner.scss */
 .jHtmlArea .ToolBar .bold {
-  background: url('../img/icons-sedb12026c5.png') 0 -1214px no-repeat;
+  background: url('../img/icons-sdc326c2acf.png') 0 -879px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 242, ../scss/inner.scss */
+/* line 240, ../scss/inner.scss */
 .jHtmlArea .ToolBar .italic {
-  background: url('../img/icons-sedb12026c5.png') 0 -1260px no-repeat;
+  background: url('../img/icons-sdc326c2acf.png') 0 -935px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 245, ../scss/inner.scss */
+/* line 243, ../scss/inner.scss */
 .jHtmlArea .ToolBar .underline {
-  background: url('../img/icons-sedb12026c5.png') 0 -1108px no-repeat;
+  background: url('../img/icons-sdc326c2acf.png') 0 -758px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 248, ../scss/inner.scss */
+/* line 246, ../scss/inner.scss */
 .jHtmlArea .ToolBar .strikethrough {
-  background: url('../img/icons-sedb12026c5.png') 0 -1037px no-repeat;
+  background: url('../img/icons-sdc326c2acf.png') 0 -667px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 251, ../scss/inner.scss */
+/* line 249, ../scss/inner.scss */
 .jHtmlArea .ToolBar .link {
-  background: url('../img/icons-sedb12026c5.png') 0 -966px no-repeat;
+  background: url('../img/icons-sdc326c2acf.png') 0 -576px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 254, ../scss/inner.scss */
+/* line 252, ../scss/inner.scss */
 .jHtmlArea .ToolBar .html {
-  background: url('../img/icons-sedb12026c5.png') 0 -1131px no-repeat;
+  background: url('../img/icons-sdc326c2acf.png') 0 -786px no-repeat;
   width: 55px;
   height: 23px;
 }
-/* line 257, ../scss/inner.scss */
+/* line 255, ../scss/inner.scss */
 .jHtmlArea .ToolBar .quote {
-  background: url('../img/icons-sedb12026c5.png') 0 -1237px no-repeat;
+  background: url('../img/icons-sdc326c2acf.png') 0 -907px no-repeat;
   width: 23px;
   height: 23px;
 }
