--- a/scss/common.scss
+++ b/scss/common.scss
@@ -193,11 +193,21 @@ input, textarea, button {
 			left: -20px;
 			@include sized-sprite($icons, user);
 		}
+		i.over{
+			opacity:0;
+			@include sized-sprite($icons, user1);
+			@include transition(all, 0.5s, linear);
+		}
 		em {
 			position: absolute;
 			top: 10px;
 			right: 0;
 			@include sized-sprite($icons, user-s);
+		}
+		&:hover{
+			i.over{
+				opacity:1;
+			}
 		}
 	}		
 	.nav__user-no-log {
